fix gravatar height on mobile. fixes #13

--- a/src/css/widgets/page.css
+++ b/src/css/widgets/page.css
@@ -35,6 +35,7 @@
     clear: both;
     float: none;
     width: 100%;
+    height: auto;
     margin: 0 0 1em 0;
   }
 }
